# testing-discord-bot

./: Cargo.toml  README.md
src/: main.rs
src/commands/: mod.rs  ping.rs  verify.rs
