[package]
name = "deeznuts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
dotenv = "0.15.0"
reqwest = "0.12.5"
serde = "1.0.203"
serde_json = "1.0.120"
serenity = "0.12.2"
tokio = { version = "1.38.0", features = ["full"] }
